# OnDevice-GaussianSplatting

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt  ply_loader.cpp  ply_loader.h  renderer.cpp
app/src/main/java/com/ondevice/gaussiansplatting/: MainActivity.java
